namespace/mcp/mcp-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-hub
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp-hub
  template:
    metadata:
      labels:
        app: mcp-hub
    spec:
      containers:
        - name: mcp-hub
          image: docker.io/samanhappy/mcphub:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: mcp-hub-config
